@@ -141,6 +141,7 @@ public class UpdateStatement extends ModificationStatement
                                                                     cfm.cfName));
                 }
             }
+            indexManager.validateRowLevelIndexes(key, cf);
         }
     }
 
